# neon

./: .clang-format  .pre-commit-config.yaml  Doxyfile  Makefile  README.md  clang.txt  meson.build
.github/workflows/: ci.yaml
include/: clazz.hpp
src/: clazz.cpp  main.cpp  meson.build
tests/: meson.build  test.cpp
